--- a/back-end/golang/learn-go-udemy/templates/about.page.tmpl
+++ b/back-end/golang/learn-go-udemy/templates/about.page.tmpl
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>This is the home page</h1>
+      <h1>This is the about page</h1>
       <p>This is some text</p>
     </div>
   </div>
