--- a/back-end/golang/hello-world-udemy/templates/about.page.tmpl
+++ b/back-end/golang/hello-world-udemy/templates/about.page.tmpl
@@ -1,16 +1,11 @@
 {{template "base" .}}
 
-{{define "content"}}
+{{define "content" }}
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>This is the home page</h1>
-      <p>This is some text</p>
+      <h1>This is about page</h1>
     </div>
   </div>
 </div>
 {{ end }}
-
-
-
-
